# Finance-Quiz

./: .env.example  .gitignore  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 3008c3b343fb_create_users_table.py  305c7afeb5a8_create_categories_table.py  c276a388c1df_create_topics_table.py  d10f29f8e173_create_users_table.py  e5999b65c9ac_add_question_options.py
app/: main.py
app/core/: config.py  enums.py  logging.py
app/db/: entity.py  session.py
app/models/: __init__.py  category.py  question.py  question_option.py  topic.py  user.py
docs/: ADR-001.md
