[project]
name = "finance-quiz"
version = "0.1.0"
description = "Finance Quiz Platform"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Sarthak Bhardwaj" }
]

dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.41",
    "alembic==1.16.4",
    "python-telegram-bot==22.3",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "httpx==0.28.1",
    "ruff==0.12.5",
    "mypy==1.17.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]